[tool.poetry]
name = "my_fancy_project"
version = "0.1.0"
description = "predicting devops"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
